# orc-dev-cli

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements.txt
docs/: commands.md  dev.md  index.md
docs/commnads/: cluster.md  general.md  rhoam.md
orc/: addon_state.py  cli.py  code.py  config.py
orc_dev_cli/: __init__.py  addon_state.py  cli.py  code.py  config.py  helper.py
orc_dev_cli/cluster/: __init__.py  cli.py  defaults.py  delete.py  list.py  login.py  status.py
orc_dev_cli/data/: index_build.toml
orc_dev_cli/index_build/: default.py  index.py
orc_dev_cli/rhoam/: cli.py  delete.py  status.py
orc_dev_cli/rhoam/index/: __init__.py  default.py
samples/: demo.toml  index_build.toml  mock_ocm_list_cluster.txt  orc-index_data.json  simple.toml
scripts/: bash_completion.sh
tests/: test_index.py  test_orc_dev_cli.py  test_osd.py
