[tool.poetry]
name = "orc-dev-cli"
version = "0.4.2"
description = "CLI dev tool for interacting with openshift clusters and RHOAM addons."
authors = ["Jim Fitzpatrick <jimfity@gmail.com>"]
readme="README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.2"
toml = "^0.10.2"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
black = "^22.3.0"
mkdocs = "^1.3.0"
flake8 = "^5.0.4"
bandit = {extras = ["toml"], version = "^1.7.4"}
isort = "^5.10.1"

[tool.poetry.scripts]
orc = 'orc_dev_cli.cli:cli'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
py36 = true
include = '\.pyi?$'
exclude = '''
/(
  \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
)/
'''

[tool.isort]
profile = "black"