[tool.poetry]
name = "orc-dev-cli"
version = "0.8.0-alpha.0"
description = "CLI dev tool for interacting with openshift clusters and RHOAM addons."
authors = ["Jim Fitzpatrick <jimfity@gmail.com>"]
readme="README.md"
homepage = "https://github.com/Boomatang/orc-dev-cli"
repository = "https://github.com/Boomatang/orc-dev-cli"
documentation = "https://github.com/Boomatang/orc-dev-cli/tree/main/doc"
keywords = ['OpenShift', 'addon', 'operator', 'index', 'bundle']
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    ]

include = ["orc_dev_cli/data"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.2"
toml = {version = "^0.10.2", python = "<3.11"}
requests = "^2.28.1"
pyperclip = "^1.8.2"
semver = "^2.13.0"
podman = "^4.2.0"
GitPython = "^3.1.28"
PyYAML = "^6.0"
pydantic = "^1.10.4"
rich = "^13.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
black = "^22.3.0"
mkdocs = "^1.3.0"
flake8 = "^5.0.4"
bandit = {extras = ["toml"], version = "^1.7.4"}
isort = "^5.10.1"
mock = "^4.0.3"
coverage = "^6.5.0"

[tool.poetry.scripts]
orc = 'orc_dev_cli.cli:cli'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
py36 = true
include = '\.pyi?$'
exclude = '''
/(
  \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
)/
'''

[tool.isort]
profile = "black"

[tool.bandit]
assert_used.skips = ['*_test.py', '*/test_*.py']